app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require font-awesome
 */
*{
  margin: 0;
  margin-left: 0;
}

::-webkit-scrollbar {
    display: none;
}

body{
  transition: background-color 2s;
}

.bodyChange{
  background-color: whitesmoke;
}

#submit-bar{
  margin-top: 2em;
}

#content-div{
  display: inline-block;
  position: fixed;
  /*z-index: 100;*/
  width: 30em;
  padding-top: .5em;
  /*margin-top: .5em;*/
  margin-bottom: 1em;
  margin-left: 3em;
  height: 100%;
  overflow-y: scroll;
  transition: opacity 2s;
}

#submit-bar{
  width: 30em;
  overflow-y: auto;
}

p{
  width: 23em;
}

i{
  position: relative; top: 70%; transform: translateY(10%);
}

.todo{
  display: inline-block;
  width: 25em;
  margin-bottom: .5em;
}

.fa:hover{
  color: red;
}

@media only screen and (max-width: 480px) {

  *{
    margin-left: .1em !important;
    margin-top: .1em !important;
  }

}


/* SVG THINGS */

.overlay {
  opacity: 1;
  position: fixed;
  width:100%;
  height:100%;
  /*z-index: 0;*/
  /*overflow: auto;*/
}

line{
  transition: stroke 2s;
}

circle{
  transition: r 2s, stroke 2s;
}

.circle{
  animation: dash 15s linear infinite;
}

.circle2{
  animation: dash 15s linear reverse infinite;
}

.line {
  animation: dash 30s linear infinite;
}

.line1 {
  animation: dash 7s linear infinite;
}

.line2 {
  animation: dash 20s linear infinite;
}

@keyframes dash {
  from {
    stroke-dashoffset: 500;
  }
}

